a1/brendan_gordon/TEST_PROGRAMS/invalidtype/justin_domingue/invalidtype-2.min
# Invalid type 2

var x: int;
var x: float; # no redeclaration

